--- a/ENTC.css
+++ b/ENTC.css
@@ -979,12 +979,7 @@ text-decoration: none;
     margin-left: 25px;
 }
 
-.inside-card{
-    width: 270px;
-    height: 193px;
-    margin-left: 1rem;
-    padding-top: 24px;
-}
+
 
 .faculty-heading{
     margin-bottom: 40px;
@@ -1065,10 +1060,9 @@ line-height: 1.5rem; /* 171.429% */
 }
 
 .inside-card{
-    width: 270px;
+    width: 100%;
     height: 193px;
-    margin-left: 1rem;
-    padding-top: 24px;
+    padding:20px 15px;
 }
 
 .faculty-heading{
@@ -1085,15 +1079,17 @@ line-height: normal;
     
 }
 .faculty-image{
-    width: 130px;
-    height: 91px;
+    overflow: hidden;
+    width: 100px;
+    height: 100px;
     margin: 1px auto;
-}
-.faculty-image i{
-    background-color: white;
-    border:3px black solid;
-    padding: 1.5px;
     border-radius: 50%;
+    position: relative;
+}
+
+.faculty-image img{
+    width:100px;
+    position: absolute;
 }
 
 .faculty-name{
