--- a/COMP.css
+++ b/COMP.css
@@ -473,27 +473,31 @@ a.fetchLink.active {
     margin-left: 30px;
 } */
 .hod_pic{
-    margin-top: 40px;
+    margin-top: 75px;
     padding: 1.5px;
     border-radius: 50%;
+    height: 4rem;
+    width: 4rem;
+    margin-left: 1.7rem;
+    position: relative;
+}
+.hod_pic img{
+    border-radius: 50%;
+    width: 4rem;
+    transform: scale(2);
+    position: absolute;
 }
 .hod_icon{
     display: flex;
     gap: 0.5rem;
 }
 .hod_contain img{
-    height: 2.2rem;
     width: 2.2rem;
     margin-top: 0.3rem;
 }
-.hod_pic img{
-    border-radius: 50%;
-    width: 9rem;
-height: 9rem;
-}
 .hod_contain{
-    margin-top: 20px;
-    margin-left: 16px;
+    margin-top: 13px;
+    margin-left: 3rem;
 }
 .head_ok{
     color: #0C2695;
@@ -982,13 +986,15 @@ text-decoration: none;
     margin-left: 25px;
 }
 
-.inside-card{
-    width: 270px;
-    height: 193px;
-    margin-left: 1rem;
-    padding-top: 24px;
-}
 
+.inside-card {
+    /* width: 270px; */
+    width: 100%;
+    height: 193px;
+    padding-top: 24px;
+    padding: 20px 1rem;
+
+}
 .faculty-heading{
     margin-bottom: 40px;
     color: #0C2695;
@@ -1003,9 +1009,20 @@ line-height: normal;
     
 }
 .faculty-image{
-    width: 130px;
-    height: 91px;
+    overflow: hidden;
+    width: 100px;
+    height: 100px;
     margin: 1px auto;
+    border-radius: 50%;
+    position: relative;
+}
+
+.faculty-image img{
+    width:100px;
+    position:absolute;
+    transform: scale(1.5);
+    top: 26px;
+   
 }
 .faculty-image i{
     background-color: white;
@@ -1823,7 +1840,7 @@ padding-left: 0.8rem;
 }
 
 
-/*----------------------------------------------------- RESEARCH AND DEVELOPMENT -----------------------------------------------------*/
+/----------------------------------------------------- RESEARCH AND DEVELOPMENT -----------------------------------------------------/
 
 #RandD{
     margin-top: 2rem;
