--- a/ENTC.css
+++ b/ENTC.css
@@ -41,7 +41,7 @@
     justify-content: space-between;
     /* top: 40px; */
     min-height: 80px;
-    width: 1520px;
+    /* width: 1520px; */
     transition: 0.86s;
     align-items: center;
     align-items: space-between;
