--- a/student.css
+++ b/student.css
@@ -30,7 +30,7 @@ body{
     justify-content: space-between;
     /* top: 40px; */
     min-height: 80px;
-    width: 1520px;
+    /* width: 1520px; */
     transition: 0.86s;
     align-items: center;
     align-items: space-between;
