--- a/collage.css
+++ b/collage.css
@@ -513,15 +513,17 @@ nav bar and first section complete
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 554px) {
   .about .player{
-    width: max(270px,95vw);
-    height: calc(max(300px,100vw)/2);
-    margin-top: 0;
-    padding: 0;
+    width: 300px;
+    height: 200px;
+    margin-top: 0px;
+  }
+  .about{
+    background-image: linear-gradient(#0C2695 35%,#fff 1%, #fff 59%);
+    gap:100px;
   }
 }
-
 
 /* -------------- */
 .Departments .top{
