--- a/student.css
+++ b/student.css
@@ -9,31 +9,29 @@
 body{
     overflow-x: hidden;
 }
-
-.container{
-    height: 40px;
-    width: 100%;
-    background: #0C2695;
-    align-items: center;
+/* top nav */
+.topper{
     display: flex;
-    justify-content: end;
-    padding-right: 198px;
-
-
-    
-}
-.header {
+    height: 40px; 
+    background-color: #0C2695;
+    display: flex;
+    justify-content: right;  /* mq */
+    padding: 0px 11.45%;
+    transition: 0.80s;
+  
+  }
+  
+  /* 2nd nav */
+  .header {
     /* position:fixed; */
     z-index: 1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /* top: 40px; */
     min-height: 80px;
-    /* width: 1520px; */
-    transition: 0.86s;
+    /* width: 77.10%;  */  /* not required*/
+    transition: 0.80s;
     align-items: center;
-    align-items: space-between;
     background-color: #fff;
     color: #000;
     padding: 0px 11.45%;
@@ -41,21 +39,62 @@ body{
     overflow: hidden;
     font-size: 0.875rem;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
+    gap : 10%;
   }
-  .header_head{
-    width: 100%;
-    height: 40px;
-    flex-shrink: 0;
-    background-color: #0C2695;
-    overflow: hidden;
+  
+  .header .head{
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    text-align: left;
+    font-weight: 700;
+    margin: 1px;
+    font-size: 1rem;
+    height: 50px;
+    position: relative;
+    color: #0C2695;
   }
+  .header .head p{
+    font-size: 16px;
+  }
+  
+  /* */
+  @media only screen and (max-width:1000px){
+    .header, .topper{
+      padding: 0px 5%;
+    }
+  }
+  @media only screen and (max-width:850px){
+    .header, .topper{
+      padding: 0px 2%;
+    }
+  }
+  
+  /* header nav */
+  
+  .header nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    font-weight: 200;
+  }
+  
+  .header nav a {
+    color: #000;
+    text-decoration: none;
+    font-size: 0.8rem;
+    width: fit-content;
+    margin: 10px 15px;
+    font-weight: 500;
+  }
+  
   .header_items{
     text-decoration: none;
     display: flex;
     justify-content: end;
     gap: 24px;
-    margin-top: 9px;
-    margin-right: 198px;
+    margin-top: 9px;  /*            changes              */
     color: #FFF;
     /* font-family: 'Inter'; */
     font-size: 12px;
@@ -67,6 +106,7 @@ body{
     text-decoration: none;
     color: #FFF;
   }
+  
   .header .head{
     margin: 0;
     display: flex;
@@ -83,9 +123,6 @@ body{
   
   .header .head p{
     font-size: 16px;
-    height: 50px;
-    translate: 0px -16px;
-    margin: 16px 0px;
   }
   
   .header nav {
@@ -105,52 +142,66 @@ body{
       font-weight: 500;
   }
   
+  /* ------------------------ */
+  
   .hamburger{
     position: absolute;
     visibility: hidden;
-    top: 67px;
-    height: 38px;
-    width: 38px;
+    top: 60px;
+    height: 35px;
+    width: 35px;
     right: 15px;
     background-size: contain;
-    border: 2px solid #0C2695;
-    border-radius: 10px;
+    /* border: 2px solid #0C2695; */
+    border-radius: 5px;
     overflow: hidden;
   }
   
   #hamburger{
-    transform: translateY(-42px);
-    transition: 0.86s;
+    transform: translateY(-38px);
+    transition: 0.12s;
   }
   
   .hamburger img{
-    height: 38px;
-    width: 38px;
+    height: 35px;
+    width: 35px;
   }
-.mid{
-    display: flex;
-    gap: 25px;
-    /* margin-left: 56.81rem;  */
-    
-}
-.box{
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Plus Jakarta Sans;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    color: #FFF;
-}
-.nav_bar{
-    height: 80px;
-    /* background-color: aqua; */
-    /* width: 1440px; */
-    display: flex;
-    /* justify-content: space-evenly; */
-    align-items: center;
-    /* border: 2px solid black; */
-}
+  
+  /* hamburger menu appears */
+  @media only screen and (max-width: 800px) {
+    .topper{
+      justify-content: center;
+      /* transition: 0.80s; */
+    }
+    .topper ul{
+      padding: 0;
+    }
+    .header{
+      height: 80px;
+      flex-direction: column;
+      /* justify-content: */
+      gap:0px;
+    }
+    .header .head{
+      margin-top: 20px;
+      /* width: 300px; */
+    }
+    .header .head{
+      position:absolute;
+      left:15px;
+    }
+    .header .hamburger{
+      visibility: visible;
+    }
+    .header nav{
+      flex-direction: column;
+      margin-top: 70px;
+    }
+    .navele{
+      visibility: hidden;
+    }
+  }
+  
 .nvc1{
     display: flex;
     color: #000;
@@ -165,72 +216,49 @@ body{
     line-height: 24px; /* 171.429% */
     
 }
-.ait_logo{
 
-    margin-left: 165px;
-    width: 45.041px;
-    height: 40px;
-    flex-shrink: 0;
-}
-.nvc{
-  
-    color: #0C2695;
-    /* margin-left: 224.04px; */
-    margin-left: 20px;
-    /* margin-right: 1058.96px;
-    width: 159px; */
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Plus Jakarta Sans;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
-.nvc1{
-    margin-left: 29.80rem;
-}
-.g20_logo img{
-    margin-left: 16px;
-    width: 45.041px;
-    height: 40px;
 
-}
+/* ----------------------------------------------------------------- */
 .camp{
-    background-image: url(aitcampbanner.jpg);
+    background: url("./aitcampbanner.jpg") no-repeat;
     background-size:cover;
-    width: 100%;
-    height: 401px;
-    flex-shrink: 0;
+    background-position: center;
+
+    height: 30vw;
+    min-height: 320px;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
+
 .about{
     display: flex;
-    width: 188px;
-    height: 80px;
+    height: auto;
+    width: fit-content;
+    padding: 20px;
+
     background-color: #0C2695;
     opacity: 0.8;
     justify-content: center;
     align-items: center;
     color: #FFF;
-/* leading-trim: both;
-text-edge: cap; */
+
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: Plus Jakarta Sans;
-    font-size: 36px;
+    font-size: max(23px,2.5vw);
+
     font-style: normal;
     font-weight: 600;
     line-height: normal;
     border-radius: 8px;
 }
+
 .about1{
-   
-    width: 445px;
-    height: 63px;
-    flex-shrink: 0;
-    /* border: 1px solid black; */
+    width: 90%;
+    max-width: 450px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -240,35 +268,17 @@ text-edge: cap; */
     opacity: 0.8;
     color: #FFF;
     text-align: center;
-    /* leading-trim: both;
-    text-edge: cap; */
+   
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: Plus Jakarta Sans;
-    font-size: 16px;
+    font-size: max(12px,1.2vw);
     font-style: normal;
     font-weight: 600;
     border-radius: 8px;
     line-height: normal;
 }
 
-
-.aait{
-    height: 564px;
-    /* width: 1440px; */
-    background: linear-gradient(128deg, #0C2695 0%, #4C6BF1 94.45%);
-    border: 1px solid black;
-    margin-bottom: 106px;
-}
-
-.rectbig{
-    display: flex;
-    gap: 1.87rem;
-    /* align-items: center; */
-    justify-content: center;
-
-}
-
-
+/* ------------------------------ */
 .ab{
     color: #FFF;
     text-align: center;
@@ -503,93 +513,66 @@ text-edge: cap; */
     align-items: center;
     padding-left: 20px;
 }
+
+
+/* ---------------- --------------------------------*/
 .about_us{
     width: 100%;
     height: fit-content;
     flex-shrink: 0;
     display: flex;
     justify-content: space-between;
+    position: relative;
+    padding-left: 82px;
 }
-.about_content{
-    width: 445px;
+.main_content{
+    width: 30vw;
     text-align: justify;
-    
 }
 .ab{
     color: #0C2695;
-    leading-trim: both;
-    text-edge: cap;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: 'Plus Jakarta Sans';
     font-size: 32px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-left: 82px;
     margin-top: 64px;
 } 
 .about_vision{
     color: #4C6BF1;
-    leading-trim: both;
-    text-edge: cap;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: 'Plus Jakarta Sans';
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-left: 82px;
     margin-top: 40px;
-
 }
 .about_content{
     color: #6D6D6D;
-    leading-trim: both;
-    text-edge: cap;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: 'Plus Jakarta Sans';
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 24px; /* 150% */
-    margin-left: 82px;
+    line-height: 24px;
     margin-top: 16px;
 }
+
 .about_mission{
     color: #4C6BF1;
-    leading-trim: both;
-    text-edge: cap;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: 'Plus Jakarta Sans';
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-left: 82px;
     margin-top: 40px;
 }
-.about_list{
-    height: 204px;
-    width: 445px;
-    margin-left: 100px;
-    margin-top: 16px;
-}
-.about_list li{
-    color: #6D6D6D;
-leading-trim: both;
-text-edge: cap;
-font-feature-settings: 'clig' off, 'liga' off;
-font-family: 'Plus Jakarta Sans';
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 24px; /* 150% */
-}
-
 .rectangle_blue{
-    width: 610px;
+    width: 40%;
     height: initial;
-    flex-shrink: 0;
     background-image: linear-gradient(124deg, #0C2695 0%, #4C6BF1 100%);
     margin-left: 25%;
 }
@@ -597,20 +580,35 @@ line-height: 24px; /* 150% */
 .about_image{
     border-radius: 16px;
     background: lightgray 50% / cover no-repeat, #FFF;
-    width: 770px;
-    height: 313px;
+    height: 300px;
     flex-shrink: 0;
     position: absolute;
     z-index: 2;
-    margin-top: 139px;
-    margin-left: 780px;
+    top:30%;
+    right:10%;
 } 
 .about_image img{
     width: 540px;
     height: 300px;
 }
 
-
+@media only screen and (max-width : 1350px){
+    .main_content{
+        width:max(400px,60vw);
+    }
+    .rectangle_blue ,.about_image{
+        display: none;
+    }
+    .about_us{
+        justify-content: center;
+        margin: 0;
+        padding: 10px;
+    }
+    .about_content{
+        font-size: 90%;
+    }
+}
+/* ------------------------------------------------------------  */
 #director_top{
     border-top: none;
 }
@@ -619,31 +617,6 @@ line-height: 24px; /* 150% */
     text-align: justify;
 }
 
-.director_content{
-    max-width: 57vw;
-    overflow: hidden;
-    display: block;
-}
-.director_content2{
-    display: flex;
-    justify-content: space-between;
-}
-.director_pic{
-    border-radius: 50%;
-    margin-left: 1.88rem;
-    width: 160px;
-    height: 160px;
-    background: url(diro.jpg);
-    background-repeat: no-repeat;
-    background-position: top;
-    /* background-color: #FFF; */
-    display: inline-block;
-}
-
-.director_contain{
-    margin-left: 1.88rem;
-    /* margin-top: 20px; */
-}
 .dir{
     display: flex;
 }
@@ -1095,30 +1068,29 @@ color: black;
 text-decoration: none;
 }
 
+
+/* ---------------------------------------------------------------- */
 .scholar{
     margin-left: 1.88rem;
 }
 .scholar h2{
     color: #0C2695;
-leading-trim: both;
-text-edge: cap;
-font-feature-settings: 'clig' off, 'liga' off;
-font-family: "Plus Jakarta Sans";
-font-size: 2rem;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: "Plus Jakarta Sans";
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 .industrial_visit_links{
     height: 112px;
-    width: 868px;
+    width: 600px;
     border-radius: 10px;
-    /* border: solid 0.1px rgba(0, 0, 0, 0.1); */
     box-shadow: 1px 1px 3px rgba(0, 0,0,0.2);
     margin-bottom: 25px;
     display: flex;
     align-items: center;
-    /* padding-left: 1.31rem; */
+    padding: 1rem;
 }
 
 .industrial_visit_links img{
@@ -1313,7 +1285,7 @@ gap: 9.8rem;
     /* text-decoration: underline; */
     color: #0C2695;
     text-align: justify;
-    line-height: 1.5rem; 171.429% */
+    line-height: 1.5rem; /* 171.429% */
     
 }
 
@@ -1379,5 +1351,5 @@ gap: 9.8rem;
 
 .read-mag{
     font-size: 1rem;
-    margin-left: ;
+    /* margin-left: ; */
 }
