--- a/ENTC.css
+++ b/ENTC.css
@@ -402,7 +402,7 @@ line-height: 24px; /* 150% */
 .table{
     margin-top: 106px;
     width: 255px;
-    height: 850px;
+    height: 896px;
     box-shadow: 0.1px 0.1px 3px rgba(0, 0,0,0.2);
     border-radius: 2px;
     font-family:'Plus Jakarta Sans';
@@ -2364,5 +2364,64 @@ line-height: 1.4785rem; /* 147.849% */
     margin-top: 1.25rem;
     font-size: 1.5rem;
     color: #4C6BF1;
+    margin-bottom: 1.25rem;
+}
+
+/* ------------------------------------------------Achievement PAGE------------------------------------- */
+
+.achievement_contain h3{
+    font-size: 1.5rem;
+    color: #4C6BF1;
+    margin-bottom: 1.25rem;
+}
+.achievement_box{
+    display: flex;
+    gap: 2rem;
+    width: 54.4rem;
+    margin-bottom: 2rem;
+}
+.achievement_box_contain{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: justify;
+}
+.achievement_box_contain p{
+    font-size: 1rem;
+    color: #000;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 1rem;
+    width: 27rem;
+    font-weight: 600;
+    border-radius: 15px;
+
+}
+.achievement_box img{
+    width: 24rem;
+    height: 18rem;
+}
+.achievement_container{
+    font-size: 1rem;
+    color: #000;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 1rem;
+    padding-left: 2rem;
+    width: 53rem;
+    font-weight: 600;
+    border-radius: 15px;
+    margin-bottom: 2rem;
+}
+
+/* ---------------------------------------------------- */
+
+
+
+.result_img img{
+    height: 24rem;
+    width: 48rem;
+    border: 1px solid black;
+    
+}
+.result_img{
     margin-bottom: 1.25rem;
 }
