--- a/Admission.css
+++ b/Admission.css
@@ -2003,3 +2003,41 @@ padding: 1.5rem;
     line-height: normal;
 }
 
+///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+/* -----------------------------------------NAAC=--------------------------------------------- */
+
+
+
+.syllabus_links{
+    display: flex;
+    flex-direction: column;
+    margin-top: 2.5rem;
+    gap: 25px;
+}
+.syllabus_1{
+    width: 54.4rem;
+    height: 6rem;
+    flex-shrink: 0;
+    border: 2px solid black;
+    box-shadow: 0px 3px 8px -1px rgba(50, 50, 71, 0.05), 0px 0px 1px 0px rgba(12, 26, 75, 0.24);
+    border-radius: 10px;
+    padding-top: 2rem;
+    padding-left: 1rem;
+    border-style: hidden;
+    display: flex;
+    
+}
+.syllabus_1 img{
+    height: 1.2rem;
+    width: 1.2rem;
+    margin-top: 0.25rem;
+    margin-right: 0.7rem;
+}
+.syllabus_1 a{
+    text-decoration: none;
+    color: #000;
+}
+.iqac_contain{
+    margin-top: 30px;
+
+}
