--- a/ENTC.css
+++ b/ENTC.css
@@ -2374,31 +2374,72 @@ line-height: 1.4785rem; /* 147.849% */
     color: #4C6BF1;
     margin-bottom: 1.25rem;
 }
-.achievement_box{
-    display: flex;
-    gap: 2rem;
-    width: 54.4rem;
-    margin-bottom: 2rem;
-}
+
 .achievement_box_contain{
-    display: flex;
-    align-items: center;
-    justify-content: center;
     text-align: justify;
 }
-.achievement_box_contain p{
-    font-size: 1rem;
-    color: #000;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+.achievement_box_contain{
+    width: 22rem;
+    
+    height: 18rem;
     padding: 1rem;
-    width: 27rem;
+    /* background-color:rgba(0,0,0,0.4) ; */
+    /* transform: translateY(-6rem); */
+    border-radius: 8px;
+    /* visibility: hidden; */
+    /* opacity: 0; */
+    position: relative;
+
+    
+
+    
+    
+}
+.achievement_box_contain:hover.achievement_box_contain p {
+    cursor: pointer;
+    top: 160px;
+    opacity: 1;
+    transition: 0.5s;
+    height: 7rem;
+    
+
+    
+}
+.achievement_box_contain p{
+    color: #FFF;
+    font-size: 0.8rem;
     font-weight: 600;
-    border-radius: 15px;
+    position: relative;
+    top: 194px;
+    opacity: 0;
+    background-color: rgb(0, 0, 0,0.4);
+    width: 22rem;
+    padding: 10px;
+    height: 7rem;
+    border-radius: 8px;
+    
+    left: -16px;
+    
+}
+.achievement_mainbox{
+    display: flex;
+    gap: 2rem;
+    margin-bottom: 4rem;
+}
+.achievement_box{
+    /* position: absolute; */
+    height: 18rem;
+    width: 26rem;
+    border-radius: 8px;
 
 }
 .achievement_box img{
-    width: 24rem;
+    position: absolute;
     height: 18rem;
+    width: 22rem;
+    border-radius: 8px;
+   
+    
 }
 .achievement_container{
     font-size: 1rem;
