--- a/Admission.css
+++ b/Admission.css
@@ -2041,3 +2041,72 @@ padding: 1.5rem;
     margin-top: 30px;
 
 }
+
+
+/* --------------------------------------------LIBRARY -----------------------------------------------------------*/
+
+
+
+
+
+
+.lib_contain{
+    margin-top: 4rem ;
+    text-align: justify;
+    width: 54.4rem;
+}
+.details_elib h3{
+    font-size: 1.5rem;
+    color: #4C6BF1;
+    margin-bottom: 1.25rem;
+}
+.details_elib{
+    margin-top: 3rem;
+}
+
+/* --------------------------------------------------------------------------------------------- */
+
+
+.it_labcontain{
+    margin-left: 6rem;
+    margin-top: 30px;
+    width: 54.4rem;
+    font-size: 1rem;
+    font-weight: 500;
+    text-align: justify;
+}
+
+.it_labcard{
+    display: flex;
+    gap: 3rem;
+}
+.lab_cardleft{
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 1rem;
+    width: 25.5rem;
+    font-weight: 500;
+    border-radius: 15px;
+    margin-top: 1.25rem;
+}
+.lab_cardleft ul{
+    margin-left: 1rem;
+}
+.about_lib p{
+    font-size: 1rem;
+    font-size: 500;
+}
+.about_lib{
+    margin-top: 2rem;
+}
+.about_lib h4{
+    font-size: 1.5rem;
+    color: #4C6BF1;
+    margin-bottom: 1.25rem;
+}
+.about_lib ul{
+    margin-left: 1.2rem;
+}
+.lab_cardleft_heading{
+    font-size: 1.5rem;
+    color: #4C6BF1;
+}
