--- a/IT.css
+++ b/IT.css
@@ -714,6 +714,30 @@ line-height: 1.5rem;
     margin-top: 0.2rem;
 }
 
+.it_labcontain{
+    margin-left: 6rem;
+    margin-top: 30px;
+    width: 54.4rem;
+    font-size: 1rem;
+    font-weight: 500;
+    text-align: justify;
+}
+
+.it_labcard{
+    display: flex;
+    gap: 3rem;
+}
+.lab_cardleft{
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 1rem;
+    width: 25.5rem;
+    font-weight: 500;
+    border-radius: 15px;
+    margin-top: 1.25rem;
+}
+.lab_cardleft ul{
+    margin-left: 1rem;
+}
 /* --------------------------milan--------------------------------------------------------- */
 
 
