--- a/student.css
+++ b/student.css
@@ -637,6 +637,7 @@ body{
 }
 .director_content{
     margin-left: 1.88rem;
+    width: calc(100vw - 15.5vw - 21.88rem);
 }
 
 .director_ok{
@@ -694,7 +695,6 @@ body{
     margin-top: 2px;
 }
 .para_containi{
-    
     color: #4C6BF1;
     font-feature-settings: 'clig' off, 'liga' off;
     font-size: 24px;
@@ -703,6 +703,7 @@ body{
     line-height: normal;
     display: inline-block;
     margin-top: 0px;
+    width: inherit;
 }
 .para_con{
     color: #000;
@@ -1005,9 +1006,10 @@ body{
 }
 
 .external_link{
+    width: inherit;
     display: flex;
     align-items: center;
-    max-width: initial;
+    width: inherit;
     height: 3rem;
     flex-shrink: 0;
     background: #FAFAFA;
@@ -1175,7 +1177,7 @@ text-decoration: none;
 
 #myTable {
     font-size: 1rem;
-    width: initial;
+    width: inherit;
     border-collapse: collapse;
     margin-top: 30px;
     margin-bottom: 20px;
@@ -1288,6 +1290,50 @@ text-decoration: none;
     /* margin-left: ; */
 }
 
+@media only screen and (max-width:1350px){
+    .director_content{
+        width: calc(100vw - 14.5vw - 21.88rem);
+    }
+}
+
+@media only screen and (max-width:1200px){
+    .director_content{
+        width: calc(100vw - 13.5vw - 21.88rem);
+    }
+}
+
+@media only screen and (max-width:1100px){
+    .director_content{
+        width: calc(100vw - 12.5vw - 21.88rem);
+    }
+}
+
+@media only screen and (max-width:1000px){
+    .content-transition {
+        padding: 0px 5%;
+    }
+    .director_content{
+        font-size: .9rem;
+        width: calc(100vw - 21.00rem);
+    }
+    .para_con, #link_external{
+        font-size: .9rem;
+    }
+  }
+  @media only screen and (max-width:850px) {
+    .content-transition {
+      padding: 0px 2%;
+    }
+    .director_content{
+        font-size: .8rem;
+        width: calc(100vw - 17.50rem);
+    }
+    .para_con, #link_external{
+        font-size: .8rem;
+    }
+  }
+
+  
 @media only screen and (max-width : 800px){
     #box_hide, .jd_table{
         position: fixed;
@@ -1371,29 +1417,31 @@ text-decoration: none;
         border-top: 0;
       }
     .director_content{
-    margin-left: 0rem;
-    font-size: .9rem;
-    justify-content: center;
-    text-align: center;
+        margin-left: 0rem;
+        font-size: .7rem;
+        justify-content: center;
+        text-align: center;
+        width: calc(100vw - 2.00rem);
+        /* overflow: scroll; */
     }
     .director_ok{
-    text-align: center;
+        text-align: center;
     }
     .content-transition{
     justify-content: center;
     padding: 0 0;
     }
     #link_external{
-        width: auto;
+        width: initial;
     }
     .notices_info{
         justify-content: center;
     }
     #myTable{
-        font-size: .9rem;
+        font-size: .8rem;
     }
     #myTable td {
-        padding: 10px 5px;
+        padding: 8px 3px;
     }
     .director_ok{
         text-align: center;
@@ -1406,20 +1454,13 @@ text-decoration: none;
         justify-content: center;
     }
     .para_con{
+        font-size: .7rem;
         text-align: center;
     }
     .para_con p{
         text-align: justify;
     }
+    #link_external{
+        font-size: .7rem;
+    }
 }
-
-@media only screen and (max-width:1000px){
-    .content-transition {
-        padding: 0px 5%;
-    }
-  }
-  @media only screen and (max-width:850px) {
-    .content-transition {
-      padding: 0px 2%;
-    }
-  }
