--- a/IT.css
+++ b/IT.css
@@ -54,7 +54,7 @@ body{
     text-align: center;
     overflow: hidden;
     font-size: 0.875rem;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
   }
   .header_head{
     width: 100%;
@@ -80,6 +80,14 @@ body{
   .header_items a {
     text-decoration: none;
     color: #FFF;
+    padding: 0px 5px;
+    font-weight: 600;
+  }
+  .header_items a:hover{
+    border-radius: 5px;
+    background: white;
+    color: #0C2695;
+    transition: .25s;
   }
   .header .head{
     margin: 0;
@@ -115,8 +123,15 @@ body{
     color: #000;
       text-decoration: none;
       font-size: 0.8rem;
-      margin: 10px 15px;
+      margin: 10px 10px;
       font-weight: 500;
+      padding: 5px;
+  }
+  .header nav a:hover{
+    background: #3654D2;
+    color: white;
+    border-radius: 5px;
+    transition: .35s;
   }
   
   .hamburger{
@@ -221,7 +236,7 @@ body{
     flex-shrink: 0;
     background-color: #0C2695;
     opacity: 0.8;
-    width: 460px;
+    width: 480px;
     height: 80px;
     flex-shrink: 0;
     /* position: relative; */
@@ -277,6 +292,11 @@ body{
     margin-top: 20px;
 }
 
+.buttonha:hover{
+    color: #0C2695;
+    font-weight: 600;
+}
+
 .buttonha a{
     color: #FFF;
     leading-trim: both;
@@ -298,6 +318,7 @@ body{
 }
 .about_content{
     width: 445px;
+    text-align: justify;
     
 }
 .ab{
@@ -369,7 +390,6 @@ font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: 24px; /* 150% */
-text-align: justify;
 }
 
 .rectangle_blue{
@@ -405,7 +425,7 @@ text-align: justify;
 .table{
     margin-top: 106px;
     width: 255px;
-    height: 942px;
+    height: max-content;
     box-shadow: 0.1px 0.1px 3px rgba(0, 0,0,0.2);
     border-radius: 2px;
     font-family:'Plus Jakarta Sans';
@@ -437,24 +457,23 @@ a.fetchLink.active {
     list-style: none;
     display:flex;
     flex-direction:column;
-    gap: 16px;
 }
 
 .table ul a{
     font-size: 16px;
-    color:#000000;
-    text-align:left;
+    color: rgb(0, 0, 0);
+    text-align: left;
     vertical-align: middle;
-    line-height:24px;
-    border-style:hidden;
-    /* font-family:' Plus Jakarta Sans'; */
-    width: 221px;
+    line-height: 24px;
+    border-style: solid hidden hidden;
+    width: 222px;
     height: 24px;
-    border-top: 1px solid rgba(234,234,234,1);
-    padding-top: 16px;
-    padding-bottom: 16px;
+    height: auto;
+    border-top-width: 1px;
+    border-top-color: rgb(234, 234, 234);
+    
+    padding: 11px 0px;
 }
-
 #hod_content{
     margin-top: 106px;
     /* margin-left: 0.5rem; */
@@ -743,7 +762,7 @@ line-height: 1.5rem;
 
 #Notices{
     font-family: 'Plus Jakarta Sans';
-    margin-top: 7.315rem;
+    margin-top: 6.315rem;
     margin-left: 1.87rem;
 }
 #Notices h2{
@@ -795,7 +814,7 @@ text-decoration: none;
 
 #asge_syllabus{
     font-family: 'Plus Jakarta Sans';
-    margin-top: 7.315rem;
+    margin-top: 6.315rem;
     margin-left: 1.87rem;
 }
 #fe_Sylabus{
@@ -854,7 +873,7 @@ text-decoration-line: underline;
 
 #student_roll{
     font-family: 'Plus Jakarta Sans';
-    margin-top: 7.315rem;
+    margin-top: 6.315rem;
     margin-left: 1.87rem;
 }
 #student_roll h2{
@@ -984,7 +1003,7 @@ text-decoration: none;
 }
 .cards{
     font-family: 'Plus Jakarta Sans';
-    margin-top: 7.315rem;
+    margin-top: 6.315rem;
     margin-left: 2.5rem;
 
 }
@@ -1105,7 +1124,7 @@ margin-top: 0.3rem;
 /* -----------------------------------------ASGE-RESULT---------------------------------------- */
 #result_asge{
     font-family: 'Plus Jakarta Sans';
-    margin-top: 7.315rem;
+    margin-top: 6.315rem;
     margin-left: 1.87rem;
 }
 .result_asge_re{
@@ -1749,7 +1768,7 @@ line-height: 1.5rem; /* 171.429% */
 /* --------------------------------------------------ASGE ACTIVITIES-------------------------------------------------- */
 #activity_content{
     font-family: 'Plus Jakarta Sans';
-    margin-top: 7.315rem;
+    margin-top: 6.315rem;
     margin-left: 1.87rem;
 }
 #activity_content h2{
@@ -1897,7 +1916,7 @@ line-height: 1.5rem; /* 160% */
 /* ---------------------------------------------------PROJECTS------------------------------------- */
 #project{
     font-family: 'Plus Jakarta Sans';
-    margin-top: 7.315rem;
+    margin-top: 6.315rem;
     margin-left: 1.87rem;
     font-weight: 500;
 }
@@ -2046,7 +2065,7 @@ line-height: normal;
 
 #timetable{
     font-family: 'Plus Jakarta Sans';
-    margin-top: 7.315rem;
+    margin-top: 6.315rem;
     margin-left: 1.87rem;
 }
 #timetable h1{
@@ -2061,7 +2080,7 @@ line-height: normal;
 
 #exam_section{
     font-family: 'Plus Jakarta Sans';
-    margin-top: 7.315rem;
+    margin-top: 6.315rem;
     margin-left: 1.87rem;
 }
 
