It partially responsive

--- a/student.css
+++ b/student.css
@@ -525,7 +525,7 @@ body{
 
 
 
-/* ---------------- --------------------------------*/
+/* -----------------------------------------------------------------------------------*/
 .about_us{
     width: 100%;
     height: fit-content;
