--- a/IT.css
+++ b/IT.css
@@ -63,7 +63,7 @@ body{
     .header, .topper {
       padding: 0px 5%;
     }
-    .content-transition {
+    .main {
         padding: 0px 5%;
     }
   }
@@ -71,7 +71,7 @@ body{
     .header, .topper {
       padding: 0px 2%;
     }
-    .content-transition{
+    .main{
         padding: 0px 2%;
     }
   }
@@ -432,10 +432,9 @@ line-height: 24px; /* 150% */
 /*-------------------------------------------------------------------------------*/
 
 .main{
-    width: 100%;
-    height: 2650px;
-    background-color: #FFF;
     display: flex;
+    gap: 1.88rem;
+    padding: 0 11.45%;
 }
 
 .jd_table{
@@ -641,14 +640,12 @@ margin-top: 20px;
 
 
 #lab-section{
-    margin-top: 106px;
     font-family: 'Plus Jakarta Sans';
-    margin-left: -3.9rem;
 }
 
 
 #lab-heading{
-    margin-left: 94px;
+    
     color: #0C2695;
 leading-trim: both;
 text-edge: cap;
@@ -661,7 +658,6 @@ line-height: normal;
 }
 
 .softwarelab-1{
-    margin-left: 94px;
     padding-top: 30px;
     margin-right: 130px;
     padding-bottom: 2rem;
@@ -753,7 +749,6 @@ line-height: 1.5rem;
 }
 
 .it_labcontain{
-    margin-left: 6rem;
     margin-top: 30px;
     width: 54.4rem;
     font-size: 1rem;
@@ -1013,20 +1008,12 @@ text-decoration: none;
 
 
 /* ------------------------------------------------faculty & staff------------------------------------ */
-#faculty_asge{
-    margin-left: -2rem;
-}
 .cards{
     font-family: 'Plus Jakarta Sans';
-    
-    margin-left: 2.5rem;
-
 }
 
 .card{
     margin-bottom: 25px;
-    margin-left: 0px;
-    width: 274px;
     height: 340px;
     display: inline-block;
     border-radius: 16px;
@@ -2093,7 +2080,6 @@ padding-left: 0.8rem;
     color: #4C6BF1;
     font-size: 1.5rem;
     display: inline-block;
-
 }
 .item{
     display: flex;
@@ -2125,7 +2111,6 @@ padding-left: 0.8rem;
     width: 865px;
     font-weight: 600;
     border-radius: 15px;
-    
 }
 
 
@@ -2796,7 +2781,22 @@ padding: 10px;
 
 
 /*responsive----------------------------------------------------------------*/
-
+@media only screen and (max-width:1000px){
+    .header, .topper {
+      padding: 0px 5%;
+    }
+    .main {
+        padding: 0px 5%;
+    }
+  }
+  @media only screen and (max-width:850px) {
+    .header, .topper {
+      padding: 0px 2%;
+    }
+    .main{
+        padding: 0px 2%;
+    }
+  }
   
 @media only screen and (max-width : 800px){
     #box_hide, .jd_table{
@@ -2891,7 +2891,7 @@ padding: 10px;
     .director_ok{
         text-align: center;
     }
-    .content-transition{
+    .main{
     justify-content: center;
     padding: 0 0;
     }
