--- a/IT.css
+++ b/IT.css
@@ -461,6 +461,7 @@ line-height: 24px; /* 150% */
     line-height: 24px; 
     padding-top:   16px;
     border-style: hidden;
+    height: auto;
     border-top: 1px solid rgba(234,234,234,1);
 }
 
@@ -1206,174 +1207,6 @@ line-height: 1.5rem; /* 171.429% */
     color: #4C6BF1;
     margin-bottom: 1.25rem;
 }
-
-
-
-
-
-
-
-
-/* mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm*/
-#director_top{
-    border-top: none;
-}
-.middle_bar{
-    display: flex;
-}
-
-.director_content{
-    
-}
-.director_content2{
-    display: flex;
-    padding-top: 1.2rem;
-}
-.director_pic{
-    border-radius: 50%;
-    
-    width: 160px;
-    height: 160px;
-    background: url(diro.jpg);
-    background-repeat: no-repeat;
-    background-position: top;
-    /* background-color: #FFF; */
-    display: inline-block;
-}
-.director_contain{
-    margin-left: 20px;
-    margin-top: 20px;
-}
-.dir{
-    display: flex;
-}
-
-.director_ok{
-    color: #0C2695;
-    leading-trim: both;
-    text-edge: cap;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: 'Plus Jakarta Sans';
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    
-}
-
-.director_name{
-    color: #000;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: 'Plus Jakarta Sans';
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-}
-.director_rank{
-    color: #0C2695;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: 'Plus Jakarta Sans';
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    margin-top: 2px;
-    line-height: 24px; /* 171.429% */
-}
-.director_rank2{
-    color: #0C2695;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: 'Plus Jakarta Sans';
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px; /* 171.429% */
-    margin-top: 2px;
-}
-.rank2{
-    color: #6D6D6D;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Plus Jakarta Sans;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    margin-top: 2px;
-}
-.para_containi{
-    
-    color: #4C6BF1;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    display: inline-block;
-    margin-top: 34px;
-}
-.para_con{
-    color: #000;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    margin-top: 16px;
-    margin-right: 50px;
-    width: 842px;
-}
-.para_head{
-    color: #4C6BF1;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    display: inline-block;
-    margin-top: 34px;
-    margin-bottom: 16px;
-}
-.lifeat{
-    display: flex;
-    margin-top: 72px;
-}
-
-/* Life at ait */
-.laa{
-    /* width: 1440px; */
-    /* background-color: aqua; */
-    font-family:'Plus Jakarta Sans';
-    margin-left: 60px;
-    
-    /* border: 1px solid black; */
-
-}
-.middle_bar{
-    display: flex;
-    flex-direction: column;
-}
-
-/* mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -2818,11 +2651,12 @@ padding: 10px;
         box-shadow: 0.1px 0.1px 3px rgba(0, 0,0,0.2);
         border-radius: 2px;
         font-family:'Plus Jakarta Sans';
-        border-radius:8px;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        padding-right: 17px;
-        visibility: visible;
+        border-radius:8px;  
+        padding-top: 12px;
+        padding-bottom: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+        cursor: pointer;
         z-index: 8;
         overflow-y: scroll;
         bottom: 1rem;
@@ -2852,7 +2686,6 @@ padding: 10px;
         font-size: 16px;
         font-style: normal;
         font-weight: 700;
-        line-height: 2rem; 
         padding-top: 6;
         border-style: hidden;
         border-top: 1px solid rgba(234,234,234,1);
@@ -2869,13 +2702,11 @@ padding: 10px;
         color:#000000;
         text-align:left;
         vertical-align: middle;
-        line-height:2rem;
         border-style:hidden;
         width: 220px;
-        height: 1.5rem;
+        height: auto;
         border-top: 1px solid rgba(234,234,234,1);
-        padding-top: 8px;
-        padding-bottom: 12px;
+        padding-top: 14px;
       }
       .jd_table ul > *:first-child{
         border-top: 0;
