--- a/collage.css
+++ b/collage.css
@@ -398,20 +398,25 @@ nav bar and first section complete
 
 /* //dept */
 .Departments{
-  padding: 60px 11.45%;
+  padding: 60px 10%;
+  box-sizing: border-box;
   flex-direction: column;
   justify-content: space-evenly;
   background-color: #FAFAFA;
+  width: 100%;
+
 }
 
 .card-container{
   display: flex;
   justify-content: center;
-  margin: 0px ;
   flex-wrap: wrap;
+  max-width: 1178px;
+  margin: auto;
 }
 
 .card-container .cards{
+  
   background-color: #fff;
   border-radius: 25px;
   color: #000;
@@ -455,9 +460,12 @@ nav bar and first section complete
   background-image: linear-gradient(90deg, #0C2695 40%,#fff 1%, #fff 59%);
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  gap:100px;
   justify-items: center;
   text-align: center;
+
+  margin: auto;
 }
 
 .about .player{
@@ -505,7 +513,7 @@ nav bar and first section complete
   cursor: pointer;
 }
 
-@media only screen and (max-width: 1350px) {
+@media only screen and (max-width: 1478px) {
   .about{
     background-image: linear-gradient(#0C2695 40%,#fff 1%, #fff 59%);
     justify-content: space-around;
@@ -524,12 +532,13 @@ nav bar and first section complete
   }
 }
 
-/* -------------- */
+/* ----------------------------------------------------- */
 .Departments .top{
   display: flex; 
   flex-wrap: nowrap; 
-  justify-content: space-between;
+  justify-content: space-around;
   font-size: 16px;
+  margin: auto;
 }
 .cards a{
   text-decoration: none;
@@ -550,8 +559,7 @@ nav bar and first section complete
   font-weight: 500;
   padding: 14px 24px;
   margin: 15px;
-  /* color: #000000;
-  width: 207px; */
+
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
   justify-content: center;
   border-radius: 20px;
@@ -565,6 +573,7 @@ nav bar and first section complete
   color: #0C2695;
 }
 
+/* ---------------------------------------------------- */
 
 .campus{
   padding-bottom: 40px;
@@ -578,7 +587,7 @@ nav bar and first section complete
   padding: 50px;
 }
 
-
+/* ---------------------------------- */
 .Departments .events{
   display: flex;
   justify-content: center;
